FIX: menu z-index

--- a/src/scss/components/sidebar.scss
+++ b/src/scss/components/sidebar.scss
@@ -3,7 +3,7 @@
   background-color: $sidebar-color;
   position: fixed;
   box-sizing: border-box;
-  z-index: 9;
+  z-index: 30;
   margin: 0;
   padding: 0;
   bottom: 0;
